<resources>
    <string name="app_name">Smart Doctor</string>
    <string name="action_settings">Settings</string>

    <!--    Add Medical Record-->
    <string name="tv_addMedRecord">Add Medical Record</string>
    <string name="tv_medRecPatName">Patient Name</string>
    <string name="tv_medRecGender">Select Gender*</string>
    <string name="rb_medRecGenderMale">Male</string>
    <string name="rb_medRecGenderFemale">Female</string>
    <string name="et_medRecDateBirth">Date of Birth DD/MM/YYYY</string>
    <string name="et_medRecPPSN">PPS Number</string>
    <string name="et_medRecAddress">Address</string>
    <string name="btn_medRecSave">Save Record</string>

    <!--    Activity Check Unique Code-->
    <string name="tv_checkUniqueCode">Check your Unique Code</string>
    <string name="tv_hospitalUniqueCode">Enter H.. or h..for Hospital</string>
    <string name="tv_doctorUniqueCode">Enter D.. or d..for Doctor</string>
    <string name="et_checkUniqueCode">Enter your Unique Code</string>
    <string name="btn_checkUniqueCode">Check Code</string>

    <!--    Activity Hospital Change Email-->
    <string name="tv_hospChangeEmailAuth">Authenticate Hospital Email</string>
    <string name="et_hospChangeEmailOldEmail">Old Email Address</string>
    <string name="et_hospChangeEmailPass">Enter your Password</string>
    <string name="btn_hospChangeEmailAuth">Authenticate User</string>
    <string name="et_hospChangeEmailNewEmail">Enter your new Email Address</string>
    <string name="btn_hospChangeEmail">Change Email</string>

    <!--    Activity Hospitals Change Password-->
    <string name="tv_hospChangePassAuth">Authenticate Hospital Password</string>
    <string name="et_hospChangePassEmail">Email Address</string>
    <string name="et_hospChangePassOldPass">Enter your old Password</string>
    <string name="btn_hospChangePassAuth">Authenticate User</string>
    <string name="et_hospChangePassNewPass">Enter your new Password</string>
    <string name="et_hospChangePassConfNewPass">Confirm your new Password</string>
    <string name="btn_hospChangePassword">Change Password</string>

    <!--    Activity Main-->
    <string name="tv_mainPage">Welcome to Smart Doctor</string>
    <string name="btn_nfcMain">NFC</string>
    <string name="btn_loginMain">Log In</string>
    <string name="btn_registerMain">Register</string>

    <!--    Activity Patient Registration-->
    <string name="tv_patRegHospitalName">Hospital Name</string>
    <string name="tv_patRegDoctorName">Doctor Name</string>
    <string name="tv_patRegCardCode">Enter Card Code</string>
    <string name="tv_patRegUniqueCode">Enter Unique Code</string>
    <string name="tv_patRegFirstName">Enter First Name</string>
    <string name="tv_patRegLastName">Enter Last Name</string>
    <string name="tv_patRegEmail">Enter Email Address</string>
    <string name="tv_patRegPassword">Enter Password</string>
    <string name="tv_patRegConfPassword">Confirm Password</string>
    <string name="btn_patSave">Save</string>
    <string name="btn_patBack">Back</string>

    <!--    Activity Login-->
    <string name="tv_userPageLog">Enter your Log in details</string>
    <string name="et_userEmailLog">Email Address</string>
    <string name="et_userPasswordLog">Password</string>
    <string name="btn_userPageLogin">Log In</string>
    <string name="btn_userPageRegister">Register</string>
    <string name="tv_userForgottenPass">Forgotten Password</string>

    <!--    Menu Main Page-->
    <string name="menu_hospitalsList">Hospitals List</string>

    <!--    Menu Hospital Change Email-->
    <string name="menuHospChangeEmail_goBack">Go Back</string>

    <!--    Menu Hospital Change Password-->
    <string name="menuHospChangePass_goBack">Go Back</string>

    <!--    Menu Hospital Page-->
    <string name="menuHosp_logOut">Log Out</string>
    <string name="menuHosp_editProfile">Edit Profile</string>
    <string name="menuHosp_changeEmail">Change Email</string>
    <string name="menuHosp_changePassword">Change Password</string>
    <string name="menuHosp_closeMenu">Close</string>

</resources>