<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pages"
    tools:context=".HospitalChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/linear_round_corners"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHospAuthPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/et_round_corners"
                android:text="@string/tv_hospChangePassAuth"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="22sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/etHospEmailPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:ems="10"
                    android:hint="@string/et_hospChangePassEmail"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:textSize="22sp"
                    tools:ignore="Autofill,RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etHospOldPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:ems="10"
                    android:hint="@string/et_hospChangePassOldPass"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="22sp"
                    tools:ignore="Autofill,RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAuthHospPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/btn_fading"
                android:text="@string/btn_hospChangePassAuth"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/linear_round_corners"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etHospNewPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:ems="10"
                    android:hint="@string/et_hospChangePassNewPass"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="22sp"
                    tools:ignore="Autofill,RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etHospConfNewPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:ems="10"
                    android:hint="@string/et_hospChangePassConfNewPass"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="22sp"
                    tools:ignore="Autofill,RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnHospChangePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/btn_fading"
                android:text="@string/btn_hospChangePassword"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>